# lambda-calc

./: CMakeLists.txt  README.md  build.sh  example.lam  expr.cpp  expr.hpp  main.cpp  run.sh
src/: expr.cpp  expr.hpp  interp.cpp  interp.hpp  main.cpp
